force-app/main/default/objects/Product_Template_Field__c/Product_Template_Field__c.object-meta.xml
<CustomObject>
    <description>This represents the selection of a field on either the Product (Product2), Opportunity Line Item, Opportunity, or Contact object.</description>
    <label>Product Template Field</label>
    <nameField>
        <displayFormat>PTF-{000000}</displayFormat>
        <label>Product Template Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>