force-app/main/default/objects/Product_Template_Field__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>This is the list of the fields that one can pick from in order to create a template.

NOTE: The picklist values in this field must be kept in sync with the Field Name values in the custom metadata type named Product Template Name Map.</description>
    <label>Field Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opp Product: Id</fullName>
            </value>
            <value>
                <fullName>Opp Product: Name</fullName>
            </value>
            <value>
                <fullName>Opp Product: ProductCode</fullName>
            </value>
            <value>
                <fullName>Opp Product: Quantity</fullName>
            </value>
            <value>
                <fullName>Opp Product: Date</fullName>
            </value>
            <value>
                <fullName>Opp Product: Created Date</fullName>
            </value>
            <value>
                <fullName>Opp Product: Last Mod Date</fullName>
            </value>
            <value>
                <fullName>Opportunity: Shipping Street</fullName>
            </value>
            <value>
                <fullName>Opportunity: Shipping City</fullName>
            </value>
            <value>
                <fullName>Opportunity: Shipping State</fullName>
            </value>
            <value>
                <fullName>Opportunity: Shipping Postal Code</fullName>
            </value>
            <value>
                <fullName>Contact: First Name</fullName>
            </value>
            <value>
                <fullName>Contact: Last Name</fullName>
            </value>
            <value>
                <fullName>Contact: Email</fullName>
            </value>
            <value>
                <fullName>Product: Id</fullName>
            </value>
            <value>
                <fullName>Product: Available To Ship Date</fullName>
            </value>
            <value>
                <fullName>Product: Cost</fullName>
            </value>
            <value>
                <fullName>Product: Distributor</fullName>
            </value>
            <value>
                <fullName>Product: Estimated Ship Time</fullName>
            </value>
            <value>
                <fullName>Product: Generic Product</fullName>
            </value>
            <value>
                <fullName>Product: Product Code</fullName>
            </value>
            <value>
                <fullName>Product: Stock Keeping Unit</fullName>
            </value>
            <value>
                <fullName>Product: Shipping Method</fullName>
            </value>
            <value>
                <fullName>Product: Type</fullName>
            </value>
            <value>
                <fullName>Opportunity: Id</fullName>
            </value>
            <value>
                <fullName>Opportunity: Account Number</fullName>
            </value>
            <value>
                <fullName>Opportunity: Close Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>