force-app/main/default/objects/Product_Template_Field__c/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <description>Determines the placement of this field within the Product Order Template.</description>
    <inlineHelpText>Index of field column when exported to Excel</inlineHelpText>
    <label>Field Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>