force-app/main/default/objects/Product_Template_Field__c/fields/Product_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_Template__c</fullName>
    <description>Determines the template that this particular field is associated with.</description>
    <label>Product Order Template</label>
    <referenceTo>Product_Order_Template__c</referenceTo>
    <relationshipLabel>Product Template Fields</relationshipLabel>
    <relationshipName>Product_Template_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>