force-app/main/default/objects/Product_Template_Field__c/validationRules/Order_Must_be_NonZero_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Must_be_NonZero_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Field_Order__c &lt; 1</errorConditionFormula>
    <errorMessage>Field Order must be 1 or greater.</errorMessage>
</ValidationRule>