force-app/main/default/objects/Product_Template_Field__c/listViews/All_Product_Template_Fields.listView-meta.xml
<ListView>
    <fullName>All_Product_Template_Fields</fullName>
    <columns>Product_Order_Template__c</columns>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Template Fields</label>
</ListView>